--- a/WebStore/Views/Home/Employees.cshtml
+++ b/WebStore/Views/Home/Employees.cshtml
@@ -9,7 +9,12 @@
     <title>Employees</title>
 </head>
 <body>
+    <a href="~/Home/Index">Главная</a>
+    <hr />
+    <br />
     <h3>Сотрудники</h3>
+    <br />
+
     <table>
         <thead>
             <tr>
