--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
 <body>
     <h1>Главная</h1>
     <br />
-    <p>First view from first contrller</p>
+    <a href="~/Home/Employees">Список сотрудников</a>
 </body>
 </html>
