--- a/WebStore/Views/Home/Employees.cshtml
+++ b/WebStore/Views/Home/Employees.cshtml
@@ -30,7 +30,7 @@
             {
                 <tr>
                     <td>@employee.Id</td>
-                    <td>@employee.LastName</td>
+                    <td>@Html.ActionLink(employee.LastName, "Details", new { id = employee.Id })</td>
                     <td>@employee.FirstName</td>
                     <td>@employee.Patronymic</td>
                     <td>@employee.Age</td>
