--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -7,7 +7,7 @@
             <li><a href="product-details.html">О товаре</a></li>
             <li><a href="checkout.html">Оформить заказ</a></li>
             <li><a href="cart.html">Корзина</a></li>
-            <li><a href="login.html">Вход</a></li>
+            <li><a asp-controller="Login" asp-action="Index">Вход</a></li>
         </ul>
     </li>
     <li class="dropdown">
@@ -17,7 +17,7 @@
             <li><a href="blog-single.html">Блог магазина</a></li>
         </ul>
     </li>
-    <li><a href="404.html">404</a></li>
-    <li><a href="contact-us.html">Контакты</a></li>
+    <li><a asp-controller="Error404" asp-action="Index">404</a></li>
+    <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
     <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
 </ul>
