--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -7,6 +7,8 @@
 
 <h3>Сотрудники</h3>
 
+<a asp-action="Create" class="btn btn-primary">Создать</a>
+
 <table class="table">
     <thead>
         <tr>
