--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h3>Сотрудники</h3>
 
-<a asp-action="Create" class="btn btn-primary">Создать</a>
+<a asp-action="Create" class="btn btn-primary">Создать</a>  <a asp-action="Edit" class="btn btn-primary">Создать2</a>
 
 <table class="table">
     <thead>
