--- a/WebStore/Views/Employees/Edit.cshtml
+++ b/WebStore/Views/Employees/Edit.cshtml
@@ -14,33 +14,33 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label">Фамилия</label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label asp-for="FirstName" class="control-label">Имя</label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Patronymic" class="control-label"></label>
+                <label asp-for="Patronymic" class="control-label">Отчество</label>
                 <input asp-for="Patronymic" class="form-control" />
                 <span asp-validation-for="Patronymic" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
+                <label asp-for="Age" class="control-label">Возраст</label>
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateofBirth" class="control-label"></label>
+                <label asp-for="DateofBirth" class="control-label">Дата рождения</label>
                 <input asp-for="DateofBirth" class="form-control" />
                 <span asp-validation-for="DateofBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmploymentDate" class="control-label"></label>
+                <label asp-for="EmploymentDate" class="control-label">Дата приема на работу</label>
                 <input asp-for="EmploymentDate" class="form-control" />
                 <span asp-validation-for="EmploymentDate" class="text-danger"></span>
             </div>
