--- a/WebStore/Views/Shared/Components/Brands/Default.cshtml
+++ b/WebStore/Views/Shared/Components/Brands/Default.cshtml
@@ -7,7 +7,7 @@
         <ul class="nav nav-pills nav-stacked">
             @foreach (var brand in Model)
             {
-                <li><a asp-controller="Catalog" asp-action="Index" asp-route-BrandId="@brand.Id"> <span class="pull-right">(-)</span>@brand.Name</a></li>
+                <li><a asp-controller="Catalog" asp-action="Index" asp-route-BrandId="@brand.Id"> <span class="pull-right">(@brand.ProductsCount)</span>@brand.Name</a></li>
             }
         </ul>
     </div>
