--- a/WebStore/Views/Shared/Components/Brands/Default.cshtml
+++ b/WebStore/Views/Shared/Components/Brands/Default.cshtml
@@ -5,7 +5,7 @@
     <h2>Бренды</h2>
     <div class="brands-name">
         <ul class="nav nav-pills nav-stacked">
-            @foreach (var brand in Model)
+            @foreach (var brand in Model.Where(s => s.ProductsCount > 0))
             {
                 <li><a asp-controller="Catalog" asp-action="Index" asp-route-BrandId="@brand.Id"> <span class="pull-right">(@brand.ProductsCount)</span>@brand.Name</a></li>
             }
