--- a/WebStore/Views/Account/Login.cshtml
+++ b/WebStore/Views/Account/Login.cshtml
@@ -1,11 +1,7 @@
-﻿
-@{
-    ViewData["Title"] = "Register";
-}
-
+﻿@model LoginViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Вход в систему";
 }
 
 <section id="form">
@@ -16,11 +12,17 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Вход в аккаунт</h2>
-                    <form asp-action="Login">
-                        <input type="text" placeholder="Логин" />
-                        <input type="password" placeholder="Пароль" />
+                    <form asp-action="Login" asp-antiforgery="true" asp-route-ReturnUrl="@Model.ReturnUrl">
+
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <input asp-for="UserName" placeholder="Логин" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+
+                        <input asp-for="Password" placeholder="Пароль" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                         <span>
-                            <input type="checkbox" class="checkbox">
+                            <input asp-for="RememberMe" class="checkbox">
                             Запомнить меня
                         </span>
                         <button type="submit" class="btn btn-default">Вход</button>
