--- a/WebStore/wwwroot/css/main.css
+++ b/WebStore/wwwroot/css/main.css
@@ -8,9 +8,9 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background:;
+
   position: relative;
-  font-weight:400px;
+  font-weight:400;
 }
 
 ul li {
@@ -263,7 +263,7 @@ a#scrollUp i{
   outline: medium none;
   padding-left: 10px;
   width: 155px;
-  background-image: url(../images/home/searchicon.png);
+  background-image: url(/images/home/searchicon.png);
   background-repeat: no-repeat;
   background-position: 130px;
 }
@@ -281,7 +281,7 @@ a#scrollUp i{
   display: block;
   -webkit-animation: fadeInUp 400ms;
   -moz-animation: fadeInUp 400ms;
-  -ms-animation: fadeInUp 400ms;
+
   -o-animation: fadeInUp 400ms;
   animation: fadeInUp 400ms;
 }
@@ -899,7 +899,7 @@ h2.title {
   transition: height 500ms ease 0s;
   width: 100%;
   display: block;
-  opacity:;
+
 }
 
 .single-products:hover .product-overlay {
@@ -2141,7 +2141,7 @@ h2.title {
 
 .rating-area {
   border: 1px solid #F7F7F0;
-  direction: block;
+
   overflow: hidden;
 }
 
