--- a/WebStore/Views/Employees/Details.cshtml
+++ b/WebStore/Views/Employees/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Employee
+﻿@using WebStore.Domain.Entities.Identity
+@model Employee
 
 @{
     Layout = "_LayoutEmployees";
@@ -35,5 +36,8 @@
 </table>
 
 <a asp-action="Index" class="btn btn-default">Сотрудники</a>
-<a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Редактировать</a>
-<a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Удалить</a>
+@if (User.IsInRole(Role.Administrator))
+{
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Редактировать</a>
+    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Удалить</a>
+}
