--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Employee>
+﻿@using WebStore.Domain.Entities.Identity
+@model IEnumerable<Employee>
 
 @{
     Layout = "_LayoutEmployees";
@@ -7,7 +8,11 @@
 
 <h3>Сотрудники</h3>
 
-<a asp-action="Create" class="btn btn-primary">Создать</a>  <a asp-action="Edit" class="btn btn-primary">Создать2</a>
+@if (User.IsInRole(Role.Administrator))
+{
+    <a asp-action="Create" class="btn btn-primary">Создать</a>
+    <a asp-action="Edit" class="btn btn-primary">Создать2</a>
+}
 
 <table class="table">
     <thead>
@@ -30,11 +35,17 @@
                 <td>@employee.Patronymic</td>
                 <td>@employee.Age</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@employee.Id"><i class="fa fa-info-circle"></i></a> |
-                    <a asp-action="Edit" asp-route-id="@employee.Id"><i class="fa fa-edit"></i></a> |
-                    <form asp-action="DeleteConfirmed" asp-route-id="@employee.Id">
-                        <button type="submit"><i class="fa fa-trash-o text-danger"></i></button>
-                    </form>
+                    <a asp-action="Details" asp-route-id="@employee.Id"><i class="fa fa-info-circle"></i></a> 
+                    @if (User.IsInRole(Role.Administrator))
+                    {
+                        @: |
+                        <a asp-action="Edit" asp-route-id="@employee.Id"><i class="fa fa-edit"></i></a> @: |
+                        <form asp-action = "DeleteConfirmed" asp-route-id = "@employee.Id" >
+
+
+                            <button type = "submit" ><i class="fa fa-trash-o text-danger"></i></button>
+                        </form>
+                     }
                 </td>
             </tr>
         }
