--- a/WebStore/Views/Cart/Index.cshtml
+++ b/WebStore/Views/Cart/Index.cshtml
@@ -29,7 +29,7 @@
                     {
                         <tr>
                             <td class="cart_product">
-                                <a href=""><img src="~/images/cart/@product.ImageUrl" alt=""></a>
+                                <a href=""><img src="~/images/shop/@product.ImageUrl" alt=""></a>
                             </td>
                             <td class="cart_description">
                                 <h4><a href="">@product.Name</a></h4>
@@ -40,16 +40,16 @@
                             </td>
                             <td class="cart_quantity">
                                 <div class="cart_quantity_button">
-                                    <a class="cart_quantity_up" href=""> + </a>
-                                    <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                    <a class="cart_quantity_down" href=""> - </a>
+                                    <a asp-controller="Cart" asp-action="Add" asp-route-id="@product.Id" class="cart_quantity_up" > + </a>
+                                    <input class="cart_quantity_input" type="text" name="quantity" value="@quantity" autocomplete="off" size="2">
+                                    <a class="cart_quantity_down" asp-controller="Cart" asp-action="Decrement" asp-route-id="@product.Id" > - </a>
                                 </div>
                             </td>
                             <td class="cart_total">
                                 <p class="cart_total_price">@((product.Price * quantity).ToString("C"))</p>
                             </td>
                             <td class="cart_delete">
-                                <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
+                                <a class="cart_quantity_delete" asp-controller="Cart" asp-action="Remove" asp-route-id="@product.Id" ><i class="fa fa-times"></i></a>
                             </td>
                         </tr>
                     }
