--- a/WebStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,13 +1,36 @@
 ﻿<!DOCTYPE html>
-
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Админка - @ViewBag.Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Админка eShoper - @ViewData["Title"] </title>
+    <partial name="Partial/_Styles" />
+
+    @await RenderSectionAsync("Styles", false)
 </head>
 <body>
-    <div>
-        @RenderBody()
+
+    <div id="wrapper">
+        <partial name="Partial/_Top" />
+
+        <partial name="Partial/_Side" />
+
+        <div id="page-wrapper">
+            <div id="page-inner">
+               
+                @RenderBody()
+
+            </div>
+        </div>
+
     </div>
+
+    <partial name="Partial/_Footer" />
+
+    <partial name="Partial/_Scripts" />
+
+    @await RenderSectionAsync("Scripts", false)
+
+
 </body>
 </html>
