Отображения списка товаров в области администратора

--- a/WebStore/Areas/Admin/Views/Shared/Partial/_Side.cshtml
+++ b/WebStore/Areas/Admin/Views/Shared/Partial/_Side.cshtml
@@ -7,7 +7,7 @@
                 <a asp-controller="Home" asp-action="Index"><i class="fa fa-adn"></i>Интсрументы</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-desktop "></i>Каталог товаров</a>
+                <a asp-controller="Products" asp-action="Index"><i class="fa fa-desktop "></i>Каталог товаров</a>
             </li>
 
 
