--- a/WebStore/Areas/Admin/Views/Products/Index.cshtml
+++ b/WebStore/Areas/Admin/Views/Products/Index.cshtml
@@ -1,4 +1,43 @@
-﻿@{
+﻿@model IEnumerable<Product>
+@{
     ViewData["Title"] = "Каталог товаров";
 
 }
+
+<table class="table">
+    <thead>
+        <tr>
+            <th></th>
+            <th>@Html.DisplayNameFor(product => product.Id)</th>
+            <th>@Html.DisplayNameFor(product => product.Name)</th>
+            <th>@Html.DisplayNameFor(product => product.Brand)</th>
+            <th>@Html.DisplayNameFor(product => product.Section)</th>
+            <th>@Html.DisplayNameFor(product => product.ImageUrl)</th>
+            <th>@Html.DisplayNameFor(product => product.Price)</th>
+            <td></td>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model)
+        {
+            <tr>
+                <td>
+                    <a href="#">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </a>
+                </td>
+                <td>@product.Id</td>
+                <td>@product.Name</td>
+                <td>@product.Brand?.Name</td>
+                <td>@product.Section?.Name</td>
+                <td><img src="~/images/shop/@product.ImageUrl" width="50" alt="@product.Name" /></td>
+                <td>@product.Price</td>
+                <td>
+                    <a href="#" class="text-danger">
+                        <i class="glyphicon glyphicon-remove"></i>
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
