Управление списком товаров в каталоге

--- a/WebStore/Areas/Admin/Views/Products/Index.cshtml
+++ b/WebStore/Areas/Admin/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
         {
             <tr>
                 <td>
-                    <a href="#">
+                    <a asp-controller="Products" asp-action="Edit" asp-route-id="@product.Id">
                         <i class="glyphicon glyphicon-edit"></i>
                     </a>
                 </td>
@@ -33,7 +33,7 @@
                 <td><img src="~/images/shop/@product.ImageUrl" width="50" alt="@product.Name" /></td>
                 <td>@product.Price</td>
                 <td>
-                    <a href="#" class="text-danger">
+                    <a asp-controller="Products" asp-action="Delete" asp-route-id="@product.Id" class="text-danger">
                         <i class="glyphicon glyphicon-remove"></i>
                     </a>
                 </td>
