Котроллер для тестирования тестового WebAPI

--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -20,4 +20,5 @@
     <li><a asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
     <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
+    <li><a asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
 </ul>
