--- a/UI/WebStore/Views/Home/Index.cshtml
+++ b/UI/WebStore/Views/Home/Index.cshtml
@@ -5,8 +5,7 @@
     var products = ProductData
         .GetProducts()
         .OrderBy(p => p.Order)
-        .Take(6)
-        .ToView();
+        .Take(6).FromDTO().ToView();
 }
 <partial name="Partial/_Slider" />
 
