--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<ul class="nav navbar-nav collapse navbar-collapse">
-    <li><a asp-controller="Home" asp-action="Index" class="active">Главная</a></li>
+    <li><a asp-controller="Home" asp-action="Index" class="@IsActive("Home")">Главная</a></li>
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
@@ -19,6 +19,14 @@
     </li>
     <li><a asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
-    <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
-    <li><a asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
+    <li><a asp-controller="Employees" asp-action="Index" class="@IsActive("Employees")">Сотрудники</a></li>
+    <li><a asp-controller="WebAPI" asp-action="Index" class="@IsActive("WebAPI")">WebAPI</a></li>
 </ul>
+
+@functions{
+    string IsActive(string Controller, string Action = "Index") =>
+        Equals(Controller, ViewContext.RouteData.Values["Controller"])
+        && Equals(Action, ViewContext.RouteData.Values["Action"])
+        ? "active"
+        : null;
+}
