--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<ul class="nav navbar-nav collapse navbar-collapse">
-    <li><a asp-controller="Home" asp-action="Index" class="@IsActive("Home")">Главная</a></li>
+    <li><a is-active-route asp-controller="Home" asp-action="Index">Главная</a></li>
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
@@ -17,10 +17,10 @@
             <li><a href="blog-single.html">Блог магазина</a></li>
         </ul>
     </li>
-    <li><a asp-controller="Error404" asp-action="Index">404</a></li>
-    <li><a asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
+    <li><a is-active-route asp-controller="Error404" asp-action="Index">404</a></li>
+    <li><a is-active-route asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
     <li><a is-active-route asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
-    <li><a asp-controller="WebAPI" asp-action="Index" class="@IsActive("WebAPI")">WebAPI</a></li>
+    <li><a is-active-route asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
 </ul>
 
 @functions{
