--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -3,11 +3,9 @@
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a asp-controller="Catalog" asp-action="Index">Каталог</a></li>
+            <li><a is-active-route ignore-action asp-controller="Catalog" asp-action="Index">Каталог</a></li>
             <li><a href="product-details.html">О товаре</a></li>
             <li><a href="checkout.html">Оформить заказ</a></li>
-            <li><a asp-controller="Cart" asp-action="Index">Корзина</a></li>
-            <li><a asp-controller="Login" asp-action="Index">Вход</a></li>
         </ul>
     </li>
     <li class="dropdown">
@@ -19,7 +17,7 @@
     </li>
     <li><a is-active-route asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a is-active-route asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
-    <li><a is-active-route asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
+    <li><a is-active-route ignore-action asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
     <li><a is-active-route asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
 </ul>
 
