--- a/UI/WebStore/Views/Catalog/Details.cshtml
+++ b/UI/WebStore/Views/Catalog/Details.cshtml
@@ -4,9 +4,10 @@
 }
 <section>
     <div class="container">
+        <vc:bread-crumbs />
         <div class="row">
             <div class="col-sm-3">
-                <partial name="Partial/_LeftSlideBar"/>
+                <partial name="Partial/_LeftSlideBar" />
             </div>
 
             <div class="col-sm-9 padding-right">
@@ -75,7 +76,7 @@
 
                 <partial name="Partial/_CategoryTab" />
 
-                <partial name="Partial/_RecommendedItems"/> <!--/recommended_items-->
+                <partial name="Partial/_RecommendedItems" /> <!--/recommended_items-->
 
             </div>
         </div>
