--- a/UI/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_FeaturesItems.cshtml
@@ -17,13 +17,25 @@
                         <div class="productinfo text-center">
                             <img src="~/images/shop/@product.ImageUrl" alt="" />
                             <h2>@product.Price.ToString("c")</h2>
-                            <p><a asp-controller="Catalog" asp-action="Details" asp-route-id="@product.Id">@product.Name</a></p>
+                            <p>
+                                <a asp-controller="Catalog"
+                                   asp-action="Details"
+                                   asp-route-id="@product.Id"
+                                   asp-route-SectionId="@Context.Request.Query["SectionId"]"
+                                   asp-route-BrandId="@Context.Request.Query["BrandId"]">@product.Name</a>
+                            </p>
                             <a asp-controller="Cart" asp-action="Add" asp-route-id="@product.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
                         </div>
                         <div class="product-overlay">
                             <div class="overlay-content">
                                 <h2>@product.Price.ToString("c")</h2>
-                                <p><a asp-controller="Catalog" asp-action="Details" asp-route-id="@product.Id">@product.Name</a></p>
+                                <p>
+                                    <a asp-controller="Catalog"
+                                       asp-action="Details"
+                                       asp-route-id="@product.Id"
+                                       asp-route-SectionId="@Context.Request.Query["SectionId"]"
+                                       asp-route-BrandId="@Context.Request.Query["BrandId"]">@product.Name</a>
+                                </p>
                                 <a asp-controller="Cart" asp-action="Add" asp-route-id="@product.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>В корзину</a>
                             </div>
                         </div>
