--- a/UI/WebStore/Views/Cart/Partial/_CheckOut.cshtml
+++ b/UI/WebStore/Views/Cart/Partial/_CheckOut.cshtml
@@ -33,7 +33,7 @@
                     <ul>
                         <li>Налог: 0</li>
                         <li>Доставка: 0</li>
-                        <li>Итого: <span>@price.ToString("C")</span> </li>
+                        <li>Итого: <span id="total-order-price">@price.ToString("C")</span> </li>
                     </ul>
                     
                     <input type="submit" class="btn btn-default check_out" />
