--- a/UI/WebStore/Views/Home/Index.cshtml
+++ b/UI/WebStore/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @inject IProductData ProductData
 @{ 
     var products = ProductData
-        .GetProducts()
+        .GetProducts().Product
         .OrderBy(p => p.Order)
         .Take(6).FromDTO().ToView();
 }
