--- a/UI/WebStore/Views/Catalog/Index.cshtml
+++ b/UI/WebStore/Views/Catalog/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CatalogViewModel 
+﻿@model CatalogViewModel
 @{
     ViewData["Title"] = "Каталог товаров";
 }
@@ -14,7 +14,12 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-                <partial name="Partial/_FeaturesItems" model="Model.Products"/>
+
+                <div id="catalog-items-container">
+
+                    <partial name="Partial/_FeaturesItems" model="Model.Products" />
+
+                </div>
 
                 <paging page-model="Model.PageViewModel"
                         page-action="Index"
