--- a/UI/WebStore/Views/Account/Register.cshtml
+++ b/UI/WebStore/Views/Account/Register.cshtml
@@ -30,3 +30,7 @@
         </div>
     </div>
 </section><!--/form-->
+
+@section Scripts{ 
+    <partial name="Partial/_ValidationScriptsPartial" />
+}
