--- a/UI/WebStore/Views/Employees/Edit.cshtml
+++ b/UI/WebStore/Views/Employees/Edit.cshtml
@@ -55,3 +55,6 @@
     <a asp-action="Index">Назад к списку</a>
 </div>
 
+@section Scripts{
+    <partial name="Partial/_ValidationScriptsPartial" />
+}
