--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -24,6 +24,7 @@
         <ul role="menu" class="sub-menu">
             <li><a is-active-route asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
             <li><a is-active-route asp-controller="AjaxTest" asp-action="Index">AJAX</a></li>
+            <li><a is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">SignalR</a></li>
         </ul>
     </li>
 </ul>
