--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -17,16 +17,20 @@
     </li>
     <li><a is-active-route asp-controller="Error404" asp-action="Index">404</a></li>
     <li><a is-active-route asp-controller="ContactUs" asp-action="Index">Контакты</a></li>
-    <li><a is-active-route ignore-action asp-controller="Employees" asp-action="Index">Сотрудники</a></li> 
+    <li><a is-active-route ignore-action asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
 
     <li class="dropdown">
-        <a href="#" >Тесты<i class="fa fa-angle-down"></i></a>
+        <a href="#">Тесты<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
             <li><a is-active-route asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
             <li><a is-active-route asp-controller="AjaxTest" asp-action="Index">AJAX</a></li>
             <li><a is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">SignalR</a></li>
         </ul>
     </li>
+
+    <li><a href="#" data-ajax="true" data-ajax-url="@Url.Action("Clear","Console")">Clear</a></li>
+    <li><a href="#" data-ajax="true" data-ajax-url="@Url.Action("WriteLine","Console", new {Message ="Привет" })">Write</a></li>
+
 </ul>
 
 @functions{
