--- a/UI/WebStore/Views/Shared/Partial/_Scripts.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Scripts.cshtml
@@ -4,6 +4,8 @@
 
 <script src="~/js/jquery.prettyPhoto.js"></script>
 
+<script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+
 
 <environment include="Development">
     <script src="~/js/price-range.js"></script>
